--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "test": "node test/test.js"
   },
+  "dependencies": {
+    "fdf": "*"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mjin12/pdffiller.git"
+    "url": "https://github.com/johntayl/pdffiller"
   },
   "author": "John Taylor",
-  "license": "BSD"
+  "license": "BSD",
+  "readmeFilename": "README.md"
 }
