Updated package.json with MIT license.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "url": "https://github.com/johntayl/pdffiller"
   },
   "author": "John Taylor",
-  "license": "BSD",
+  "license": "MIT",
   "readmeFilename": "README.md"
 }
