--- a/package.json
+++ b/package.json
@@ -16,5 +16,5 @@
     "name": "John Taylor and David Baldwynn"
   },
   "license": "MIT",
-  "readmeFilename": "README.md",
+  "readmeFilename": "README.md"
 }
