Marking package as public.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pdffiller",
   "version": "0.0.5",
-  "private": true,
+  "private": false,
   "description": "Take an existing PDF Form and data and PDF Filler will create a new PDF with all given fields populated.",
   "main": "index.js",
   "scripts": {
