--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "scripts": {
     "test": "node test/test.js"
   },
+  "keywords": [
+    "nodejs",
+    "pdftk",
+    "fdf",
+    "pdffiller",
+    "pdf"
+  ],
   "dependencies": {
     "fdf": "*",
     "lodash": "~3.8.0",
