changed package name to install and test using as a separate npm module

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pdffiller",
+  "name": "pdffiller-concurrent",
   "version": "0.0.7",
   "private": false,
   "description": "Take an existing PDF Form and data and PDF Filler will create a new PDF with all given fields populated.",
