--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pdffiller-concurrent",
-  "version": "0.0.9",
+  "name": "pdffiller",
+  "version": "0.0.88888888",
   "private": false,
   "description": "Take an existing PDF Form and data and PDF Filler will create a new PDF with all given fields populated.",
   "main": "index.js",
