--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "pdf"
   ],
   "dependencies": {
-    "lodash": "^4.17.4",
-    "utf8-fdf-generator": "0.0.3"
+    "lodash": "^4.17.4"    
   },
   "author": {
     "name": "John Taylor and David Baldwynn"
