--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "test": "node_modules/.bin/mocha test/test.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pdffillerjs/pdffiller.git"
+  },
   "keywords": [
     "nodejs",
     "pdftk",
