Switch utf8-fdf-generator dependency to pdffillerjs owned
Same change as PR #43 but not including the generator code in this repo

Solves #79

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "lodash": "~4.17.11",
-    "utf8-fdf-generator": "0.0.3"
+    "utf8-fdf-generator": "github:pdffillerjs/utf8-fdf-generator"
   },
   "author": {
     "name": "John Taylor and David Baldwynn"
