--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pdffiller",
+  "name": "pdffiller-xfd",
   "version": "0.0.11",
   "private": false,
   "description": "Take an existing PDF Form and data and PDF Filler will create a new PDF with all given fields populated.",
